-
Bug
-
Resolution: Done
-
P2: Important
-
5.9.1
-
macOS 10.12
When painting a line that has two equal points onto a pixmap when the painter is scaled, the line is drawn too thick. If it is drawn directly to a widget then it is working fine, it is only if it is drawn to a pixmap that this problem occurs.
For Gerrit Dashboard: QTBUG-61777 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
207741,2 | Fix zero-length lines with scaling | 5.9 | qt/qtbase | Status: MERGED | +2 | 0 |